src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Multiple_Question_Groups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields determines whether a Question Group is repeatable or not</description>
        <label>Allow Multiple Question Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <description>This refers to the application method being applied for- General Application, Examination, etc.</description>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Credential_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This refers to the application type being applied for: Application Types- Trades Credential, Plan Review, Permit To Operate, etc.</description>
        <label>Profession</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Required__c</fullName>
        <description>Flag values for the attachment requirement.</description>
        <label>Attachment Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chevron_Type__c</fullName>
        <label>Chevron Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legal Background</fullName>
                </value>
                <value>
                    <fullName>Questions</fullName>
                </value>
                <value>
                    <fullName>Financial Guarantee</fullName>
                </value>
                <value>
                    <fullName>Course Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Question_Group__c</fullName>
        <description>Child Question Group which will be the same as parent question group</description>
        <formula>Parent_Question__r.Question_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Child Question Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Field_API_Name__c</fullName>
        <description>This field contains the API name of the compliance field on the object in the &quot;Parent Object Field API Name&quot; field.</description>
        <inlineHelpText>Please ensure that the field is on the object in the &quot;Parent Object Field API Name&quot; field.</inlineHelpText>
        <label>Compliance Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Type_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Type Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Endorsement_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Endorsement Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credential_Type__c</fullName>
        <description>Various credential types available under a functional area and division</description>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>This refers to the credential being applied for</description>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <description>The data type using which the user response should be displayed</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Data_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Style__c</fullName>
        <description>Choose style for how this questions should show up on the page.</description>
        <label>Display Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Display_Style</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective date for a question</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eli_Ques_determines_App_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligibility questions determine appType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date for a question</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endorsement_Type__c</fullName>
        <label>Endorsement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Structural Engineer</fullName>
                </value>
                <value>
                    <fullName>Agricultural &amp; Biological</fullName>
                </value>
                <value>
                    <fullName>Building Systems</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Fire Protection</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Metallurgical and Materials</fullName>
                </value>
                <value>
                    <fullName>Mining and Mineral Processing</fullName>
                </value>
                <value>
                    <fullName>Naval Architect/Marine</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Cemetery Pre-arrangement Sales</fullName>
                </value>
                <value>
                    <fullName>Cemetery Pre-arrangement Sales Exemption</fullName>
                </value>
                <value>
                    <fullName>Crematory</fullName>
                </value>
                <value>
                    <fullName>Land Surveying</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Funeral Pre-arrangement Contract</fullName>
                </value>
                <value>
                    <fullName>Engineering Geologist</fullName>
                </value>
                <value>
                    <fullName>Hydrogeologist</fullName>
                </value>
                <value>
                    <fullName>Electronic Notary</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Answer_Parent_Field_Value_Map__c</fullName>
        <description>Expected Question &amp; Answer Mappings</description>
        <label>Expected Answer Parent Field Value Map</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Unique record identifier</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id_of_Parent__c</fullName>
        <description>Parent_Question__r.External_Id__c</description>
        <formula>Parent_Question__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Id of Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Any_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Any Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_dependent_questions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has dependent questions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Background_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Background Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MessageTriggerResponse__c</fullName>
        <label>MessageTriggerResponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mulesoft_External_Id__c</fullName>
        <label>Mulesoft External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>This field is used to order the questions in a particular order</description>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Object_API_Name__c</fullName>
        <description>Parent Object API Name to perform the filed update upon Answering the Background Question</description>
        <label>Parent Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Field_API_Name__c</fullName>
        <description>Parent Object Field API Name</description>
        <label>Parent Object Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-lookup to question</description>
        <label>Parent Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>ParentQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <description>This refers to the permit type being applied for as defined by the program area</description>
        <label>Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_Responses__c</fullName>
        <description>Delimited list of responses that should be displayed for the question</description>
        <label>Possible Responses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Question_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the previous version of the question. In case a new version of a question is being added. The previous version should be marked as Inactive and the new version should link to the previous question using this lookup.</description>
        <label>Previous Question Version</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Area__c</fullName>
        <description>This refers to the program area being applied for as defined by the application type</description>
        <label>Program Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Application_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Program_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualifying_Response__c</fullName>
        <description>The responses for which the current dependent question is considered as dependent on the parent will be stored in this field. 
If multiple responses qualify for the dependency, then multiple values can be stored here separated by a comma.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Qualifying Response</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
	    <fields>
        <fullName>Warning_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warning Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QuestionFieldAPI__c</fullName>
        <label>QuestionFieldAPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionObjectName__c</fullName>
        <label>QuestionObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Body__c</fullName>
        <description>Question text</description>
        <label>Question Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <description>Group to which question belongs</description>
        <label>Question Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Sub_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Sub Section</label>
        <referenceTo>Application_Subsection__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_is_Compliance_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true if this field is compliance related. Setting this field to true will mean that when the qualifying answer is the answer given, the compliance checkbox will be checked off on the parent object.</description>
        <inlineHelpText>Set to true if this field is compliance related. Setting this field to true will mean that when the qualifying answer is the answer given, the compliance checkbox will be checked off on the parent object.</inlineHelpText>
        <label>Question is Compliance Related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <description>Returns the question&apos;s record type name for the data migration utility</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regex_Validation__c</fullName>
        <label>Regex Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Order__c</fullName>
        <label>Section Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <label>Service Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Service_Request_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_For__c</fullName>
        <label>Show For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Show_For</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Question&apos;s status values if active or inactive</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>General_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Header__c</fullName>
        <label>Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Sub_Header__c</fullName>
        <label>Sub Sub Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission_Title__c</fullName>
        <label>Submission Title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Triggering_Comment_Box_Value__c</fullName>
        <description>A field that allows the boards to enter the values (answers) to this question that would require a comment box.</description>
        <inlineHelpText>Please enter values (answers to this question) separated by a semicolon.</inlineHelpText>
        <label>Triggering Comment Box Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Field_API_Name__c</fullName>
        <description>API name of the field on the parent object that should be checked whether or not to show this question.</description>
        <label>Triggering Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Field_Value__c</fullName>
        <description>Value of the triggering field in order to bring in the question e.g. FALSE, &apos;Submitted&apos;, etc.</description>
        <label>Triggering Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Parent_Answer__c</fullName>
        <description>Used for multiple sets of dependent children. if the parent answer matches this value, bring in this question.</description>
        <label>Triggering Parent Answer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Criteria__c</fullName>
        <label>Validation Criteria</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>The version number of the question.</description>
        <label>Version</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>max_value__c</fullName>
        <description>To enter the maximum allowed in that field</description>
        <label>max value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>min_value__c</fullName>
        <description>To enter minimum value required in that field</description>
        <label>min value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>Section__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Question_Sub_Section__c</columns>
        <columns>Sub_Sub_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Certified General Appraiser</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Exam_Questions</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>Q-000284</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Construction Inspector,Electrical Inspector,HVAC Inspector</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Plumbing Inspector,Soil Tester</value>
        </filters>
        <label>All Exam Questions</label>
    </listViews>
    <listViews>
        <fullName>Appraisal_Courses_Questions</fullName>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Possible_Responses__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Appraisers - Real Estate</value>
        </filters>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Appraiser Course</value>
        </filters>
        <filters>
            <field>QuestionObjectName__c</field>
            <operation>equals</operation>
            <value>Renewal_Application__c</value>
        </filters>
        <label>Appraisal Courses Questions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Architect_Questions</fullName>
        <columns>NAME</columns>
        <columns>Application_Method__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Section__c</columns>
        <columns>Legal_Background_Question__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Qualifying_Response__c</columns>
        <columns>Status__c</columns>
        <columns>Credential__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Architects</value>
        </filters>
        <label>Architect Questions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Background_Questions</fullName>
        <columns>NAME</columns>
        <columns>Order_Number__c</columns>
        <columns>Credential_Type__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Status__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Parent_Question__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question__c.Background_Questions</value>
        </filters>
        <label>Background Questions renewal</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DVA_Voucher</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Parent_Object_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Q-000242,Q-000243,Q-000244,Q-000245,Q-000246,Q-000399</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Q-000403,Q-000001,Q-000027,Q-000030,Q-000033,Q-000078,Q-000151,Q-000153</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>DVA Voucher</label>
    </listViews>
    <listViews>
        <fullName>Delegated_Municipality</fullName>
        <columns>NAME</columns>
        <columns>Parent_Question__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>Credential__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Delegated Municipality Agent</value>
        </filters>
        <label>Delegated Municipality</label>
    </listViews>
    <listViews>
        <fullName>Dwelling_Contractor212</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Dwelling Contractor</value>
        </filters>
        <label>Dwelling Contractor</label>
    </listViews>
    <listViews>
        <fullName>Eligibility_Questions</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Qualifying_Response__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Credential_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Question__c.Eligibility_Questions</value>
        </filters>
        <label>Eligibility Questions</label>
    </listViews>
    <listViews>
        <fullName>Embalmer_Comity</fullName>
        <columns>NAME</columns>
        <columns>Application_Method__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Possible_Responses__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Method__c</field>
            <operation>equals</operation>
            <value>Comity</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Funerals</value>
        </filters>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Embalmer</value>
        </filters>
        <filters>
            <field>Credential__c</field>
            <operation>equals</operation>
            <value>Embalmer</value>
        </filters>
        <label>Embalmer Comity</label>
    </listViews>
    <listViews>
        <fullName>Geologist_In_Training_Questions</fullName>
        <columns>NAME</columns>
        <columns>Data_Type__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Possible_Responses__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Geologist</value>
        </filters>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Geologist in Training</value>
        </filters>
        <label>Geologist In-Training Questions</label>
    </listViews>
    <listViews>
        <fullName>Geologist_Questions</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Possible_Responses__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Geologist</value>
        </filters>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Geologist</value>
        </filters>
        <label>Geologist Questions</label>
    </listViews>
    <listViews>
        <fullName>Manfactured_Home_Communities</fullName>
        <columns>NAME</columns>
        <columns>Parent_Question__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Status__c</columns>
        <columns>Order_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Communities</value>
        </filters>
        <label>Manfactured Home Communities</label>
    </listViews>
    <listViews>
        <fullName>Manufactured_Homes_Certificate_of_Title</fullName>
        <columns>NAME</columns>
        <columns>Credential__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Record_Type_Name__c</columns>
        <columns>Show_For__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Titling</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Manufactured Homes Certificate of Title</label>
    </listViews>
    <listViews>
        <fullName>Manufactured_Homes_Credential</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>External_Id__c</columns>
        <columns>Credential__c</columns>
        <columns>Application_Method__c</columns>
        <columns>Parent_Question__c</columns>
        <columns>Question_Body__c</columns>
        <columns>Show_For__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Parent_Object_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credential_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Credential</value>
        </filters>
        <filters>
            <field>Permit_Type__c</field>
            <operation>equals</operation>
            <value>Manufactured Homes Community Permit</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Manufactured Homes Credential</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{000000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Background_Information</fullName>
        <active>true</active>
        <label>Qualifying Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>Background_Questions</fullName>
        <active>true</active>
        <description>Record type used for Background question type</description>
        <label>License Information</label>
    </recordTypes>
</CustomObject>